--- a/Public/views/fav.pug
+++ b/Public/views/fav.pug
@@ -18,7 +18,7 @@ block content
                                         p.input-poke__link catch!
                                         img(src="/Public/Assets/pokeball.png" alt="Pokeball link").input-poke__link-img
                 div.conteiner-pagination.flex
-                    div.conteiner-pagination__add-db
+                    div.conteiner__fav-db
                         a(href="/PokemonAdd" )
                             img(src="/Public/Assets/poke-add.png", alt="add").add-button
                         a(href="/Fav" )#LinkFav
