--- a/Public/views/notFound.pug
+++ b/Public/views/notFound.pug
@@ -2,6 +2,6 @@ extends header.pug
 
 block content
     div.conteiner#conteiner
-            p.box-poke__name-poke.center= `there is no pokemon: `
+            p.box-poke__name-poke.align-text--center= `there is no pokemon: `
                 a(href="/Pokedex")=`${locals.pokemonData}`
     include footer.pug
