--- a/Public/views/null.pug
+++ b/Public/views/null.pug
@@ -2,5 +2,5 @@ extends header.pug
 
 block content
     div.conteiner#conteiner
-            a(href="/Pokedex").center.testing  Pokedex Empty try with other parameters
+            a(href="/Pokedex").align-text--center.null-link  Pokedex Empty try with other parameters
     include footer.pug
