Se agrego ruta de error, se arreglo error impuesto con el id_chain

--- a/Public/views/Add.pug
+++ b/Public/views/Add.pug
@@ -49,10 +49,10 @@ block content
                     select(name="ability") 
                         option(value="Ability") Ability
                         option(value="Ability Ocult") Ability ocult
-                    input(type="text" name="abilities" placeholder="Pokemon abilitie*")#abilities.form-text
+                    input(type="text" name="abilities" placeholder="Pokemon abilitie*")#abilitiesForm.form-text
                 div(hidden)#moves.align-text--center
                     input(type="button", value="+")#movesButton.button-add 
-                    input( type="text" name="moves" placeholder="Pokemon moves*")#moves.form-text
+                    input( type="text" name="moves" placeholder="Pokemon moves*")#movesForm.form-text
                 div(hidden).align-text--center
                     input(type="number" name="rate" placeholder="Pokemon rate*")#rate.form-text
                     input(type="text" name="description" placeholder=" Pokemon Description*")#descrp.form-text
