--- a/Public/Styles/style.css
+++ b/Public/Styles/style.css
@@ -333,7 +333,7 @@
 .background-white {
     background-color: #ffffffd9;
     width: 90%;
-    max-width: 500px;
+    max-width: 600px;
     margin: auto;
     box-shadow: inset 0px 4px 15px 7px rgb(0 0 0 / 53%);
     flex-direction: column;
@@ -562,15 +562,14 @@
 
 .form {
     width: 80%;
+    max-width: 320px;
     margin: 15px auto;
     background-color: #a52a2a;
     height: min-content;
     padding: 20px 15px;
     justify-content: space-between;
     align-items: center;
-    border-radius: 3px;
 }
-/* test */
 
 .conteiner-selects { width: 150px; }
 
@@ -817,3 +816,18 @@ ul > li > a {
 .margin--0 { margin: 0; }
 
 .flex--wrap { flex-wrap: wrap; }
+
+@media screen and (min-width: 768px) {
+
+    .conteiner-logotype { max-width: 500px; }
+
+    .conteiner__pokes {
+        flex-direction: row;
+        gap: 25px;
+        margin: 15px 0;
+        flex-wrap: wrap;
+    }
+
+    .conteiner__pokes__box-poke { width: 33%; }
+
+}
